<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_baseline_menu_book_24"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_products"
        android:icon="@drawable/ic_baseline_shopping_bag_24"
        android:title="@string/title_products" />

    <item
        android:id="@+id/navigation_faq"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/title_faq"
        android:visible="true" />
    <item
        android:id="@+id/navigation_benefits"
        android:icon="@drawable/ic_baseline_thumb_up_24"
        android:title="@string/title_benefits" />
    <item
        android:id="@+id/navigation_stockists"
        android:icon="@drawable/ic_baseline_store_24"
        android:title="@string/title_stockists" />

</menu>