<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_history">

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.blakesorganicandroid.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_products"
        android:name="com.example.blakesorganicandroid.ui.products.ProductsFragment"
        android:label="@string/title_products"
        tools:layout="@layout/fragment_products" />

    <fragment
        android:id="@+id/navigation_faq"
        android:name="com.example.blakesorganicandroid.ui.faq.FaqFragment"
        android:label="@string/title_faq"
        tools:layout="@layout/fragment_faq" />

    <fragment
        android:id="@+id/navigation_contact_us"
        android:name="com.example.blakesorganicandroid.ui.contactus.ContactUsFragment"
        android:label="@string/title_contact_us"
        tools:layout="@layout/fragment_contact_us" />

</navigation>