<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">



    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:backgroundTint="@color/kh_off_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        android:clickable="true"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/kh_off_white"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/cover"
                android:layout_height="190dp"
                android:layout_width="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/cover"
                />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:text="@string/title_place_holder"
                android:textColor="@color/kh_mild_grey_text"
                android:textSize="17sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:gravity="center"
                android:text="@string/description_placeholder"
                android:textColor="@color/kh_mild_grey_text"
                android:textSize="14sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>

<!--    app:cardElevation="7dp"-->
<!--    android:layout_height="190dp"-->
<!--    android:layout_width="wrap_content"-->
